*5336* Fixed text alignment problem

--- a/styles/bothSidebars.css
+++ b/styles/bothSidebars.css
@@ -20,7 +20,6 @@
 	float: left;
 	width:50%;
 	height: 100%;
-	text-align: center;
 	margin-left: 10px;
 	display: inline;
 	overflow: auto;
